--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.64.3",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-web": "0.17.1",
-    "expo-camera": "~12.0.3"
+    "expo-camera": "~12.0.3",
+    "expo-barcode-scanner": "~11.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
